--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.136",
     "@mui/material": "^5.13.6",
     "@mui/x-data-grid": "^6.9.1",
     "@testing-library/jest-dom": "^5.16.5",
